<resources>
    <string name="app_name">SmartLoadApp</string>
    <string name="title_activity_driver_landing_page">Driver Landing Page</string>
    <string name="title_activity_packer_landing_page">Packer Landing Page</string>
    <string name="title_activity_driver_order_overview">Driver Order Overview</string>
    <string name="title_activity_driver_duty_overview">Driver Duty Overview</string>
    <string name="title_activity_signature">Signature</string>
    <string name="title_activity_packer_order_overview">Packer Order Overview</string>
    <string name="title_activity_packer_duty_overview">Packer Duty Overview</string>
    <string name="title_activity_packer_art_details">Packer Article Overview</string>
    <string name="title_activity_photomaker">Photo Application</string>
    <string name="title_activity_photoitem">Photo Preview</string>
    <string name="title_activity_driver_finish">Driver Finish</string>
    <string name="title_activity_packer_finish">Packer Finish</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="Pref_login_preference"> com.htw.smartloadapp_preference_file</string>
    <string name="Pref_login_saveregister"> com.htw.smartloadapp_preference_file</string>
    <string name="Pref_login_status_preference"> com.htw.smartloadapp_preference_login_status</string>
    <string name="Pref_user_name"> com.htw.smartloadapp_preference_user_name</string>
    <string name="Pref_user_password"> com.htw.smartloadapp_preference_user_password</string>
    <string name="btnRefreshFreightOrdersDriv">Refresh freight orders</string>
    <string name="txtDescriptionOrdOverviewDriv">Description</string>
    <string name="txtCountryOrdOverviewDriv"> Country</string>
    <string name="txtPostalCityOrdOverviewDriv">PostalCode and City</string>
    <string name="txtCompNameOrdOverviewDriv">companyName</string>
    <string name="txtStreetOrdOverviewDriv">Street</string>
    <string name="btnConfirmOrdOverviewDriv"> Confirm</string>
    <string name="btnPhotoBeforeDriv"> 1.Photo before</string>
    <string name="btnPhotoAfterDriv">2.Photo After</string>
    <string name="btnSignatureDriv">3.Signature</string>
    <string name="btnSignaturePac">Signature</string>
    <string name="btnFeedbackDriv">4.Feedback</string>
    <string name="btnTakePhoto">Add </string>
    <string name="btnFinish_foto"> Finish</string>
    <string name="btnDeletePhoto"> Delete</string>
    <string name="btnSaveFeedback">Save</string>
    <string name="btnClearSign">Clear</string>
    <string name="btnSaveSign">Save</string>
    <string name="etCustomerName"> Write your name here</string>
    <string name="btnBackFinishDriv">Back</string>
    <string name="btnUploadFinishDriv">Upload</string>
    <string name="tvCompleteDummyDriv">Are you sure, that mission completed?</string>
    <string name="btnRefreshArticleOverviewPac">Refresh Articles</string>
    <string name="btnArtOverviewPac"> Article Overview</string>
    <string name="btnFeedpackpack">Feedback</string>
    <string name="btnPhotoPack">Photo</string>
    <string name="btnRefreshFreightOrdersPac"> Refresh freight orders</string>
    <string name="btnBackFinishPack">Back</string>
    <string name="btnUploadFinishPack">Upload</string>
    <string name="tvCompleteDummyPack">Are you sure, that mission completed?</string>
    <string name="etName">UserID</string>
    <string name="etPassword">Password</string>
    <string name="etforgotpassword">Password forgotten</string>
    <string name="cbLogin">Save Login </string>
    <string name="btnLogin">log in </string>
    <string name="btnFinishdutyPac"> Finish</string>
    <string name="btnFinishdutyDriv"> Finish</string>
    <string name="MnEnglish"> English</string>
    <string name="MnGerman"> German </string>
    <string name="subMenuLanguage"> Languages </string>
    <string name="actionLogOut"> Log Out</string>
    <string name="language_de"> German </string>
    <string name="language_en"> English </string>
    <string name="actionLow">Low</string>
    <string name="Pref_photo_quality"> com.htw.smartloadapp_preference_photo_quality</string>
    <string name="actionMedium"> Medium </string>
    <string name="actionHigh"> High </string>
    <string name="subMenuPhotoResolution"> Photo Quality </string>
</resources>